changed country class and table to remove continent and capital city - keeping it simple. Add country function is working

--- a/templates/home.html
+++ b/templates/home.html
@@ -9,19 +9,9 @@
     <title>VU App</title>
 </head>
 
-<body>
-    <header style="background-color: dodgerblue;">
-        <h1>VU App</h1>
-        <nav>
-            <ul>
-                <li><a href="/">Home</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        {% block content %}
-        {% endblock %}
-    </main>
+<body style="background-color: blue;">
+    <img src="../static/images/vu_logo_transparent.png" alt="vu_logo"> <br>
+    <a href="/profile">Click To Enter</a>
 </body>
 
 </html>
