--- a/templates/base.html
+++ b/templates/base.html
@@ -6,15 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-    <title>VU App</title>
+    <title>VU. App</title>
 </head>
 
 <body>
     <header style="background-color: dodgerblue;">
-        <h1>VU App</h1>
+        <h1>VU. App</h1>
         <nav>
             <ul>
-                <li><a href="/">Home</a></li>
+                <li><a href="/profile">Home</a></li>
             </ul>
         </nav>
     </header>
