--- a/templates/country/view.html
+++ b/templates/country/view.html
@@ -7,7 +7,7 @@
 </section>
 <section>
     <button style="width:10%">
-        <a href="/country/{{country.id}}/new">Add VU.</a>
+        <a href="/country-{{country.id}}/new">Add VU.</a>
     </button>
 </section>
 <hr>
@@ -18,7 +18,7 @@
         Rating: {{ vu_point.rating }} <br>
         Description: {{ vu_point.description }} <br>
         {% if vu_point.visited == True %} Status: ✅ {% else %} Status ❌ {% endif %}
-        <p><a href="/country/{{country.id}}/edit">Edit</a></p>
+        <p><a href="/country-{{country.id}}/vu-point-{{vu_point.id}}/edit">Edit</a></p>
         <hr>
     {% endfor %}
 
