--- a/templates/vu_points/view.html
+++ b/templates/vu_points/view.html
@@ -3,24 +3,18 @@
 {% block content %}
 
 <section>
-    <h2> {% if country.visited == True %} {{ country.name }} ✅ {% else %} {{ country.name }} ❌ {% endif %} </h2>
+    <h2> {% if vu_point.visited == True %} {{ vu_point.name }} ✅ {% else %} {{ vu_point.name }} ❌ {% endif %} </h2>
 </section>
 <section>
-    <button style="width:10%">
-        <a href="/country-{{country.id}}/new">Add VU.</a>
-    </button>
-</section>
-<hr>
-<section>
-    {% for vu_point in all_vu_points %}
+    
         Name:   {{ vu_point.name }} <br>
         Location: {{ vu_point.location.name }} <br>
         Rating: {{ vu_point.rating }} <br>
         Description: {{ vu_point.description }} <br>
         {% if vu_point.visited == True %} Status: ✅ {% else %} Status ❌ {% endif %}
-        <p><a href="/country-{{country.id}}/vu-point-{{vu_point.id}}/view">Edit</a></p>
+        <p><a href="/country-{{country.id}}/vu-point-{{vu_point.id}}/edit">Edit</a></p>
         <hr>
-    {% endfor %}
+    
 
 </section>
 
