--- a/templates/country/view.html
+++ b/templates/country/view.html
@@ -19,6 +19,9 @@
         Description: {{ vu_point.description }} <br>
         {% if vu_point.visited == True %} Status: ✅ {% else %} Status ❌ {% endif %}
         <p><a href="/country-{{country.id}}/vu-point-{{vu_point.id}}/view">View</a></p>
+        <form action="/country-{{country.id}}/vu-point-{{vu_point.id}}/delete" method="POST">
+            <button style="width: auto;">Delete</button>
+          </form>
         <hr>
     {% endfor %}
 
