delete country working

--- a/templates/vu_points/view.html
+++ b/templates/vu_points/view.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <section>
-    <h2> {% if vu_point.visited == True %} {{ vu_point.name }} ✅ {% else %} {{ vu_point.name }} ❌ {% endif %} </h2>
+    <h2> {{ vu_point.name }}  </h2>
 </section>
 <section>
     
