--- a/templates/country/view.html
+++ b/templates/country/view.html
@@ -6,6 +6,12 @@
     <h2> {% if country.visited == True %} {{ country.name }} ✅ {% else %} {{ country.name }} ❌ {% endif %} </h2>
 </section>
 <section>
+    <form action="/country-{{country.id}}/delete" method="POST">
+        <button style="width: auto;">Delete Country</button>
+    </form>
+</section>
+<hr>
+<section>
     <button style="width:10%">
         <a href="/country-{{country.id}}/new_vu">Add VU.</a>
     </button>
@@ -13,16 +19,16 @@
 <hr>
 <section>
     {% for vu_point in all_vu_points %}
-        Name:   {{ vu_point.name }} <br>
-        Location: {{ vu_point.location.name }} <br>
-        Rating: {{ vu_point.rating }} <br>
-        Description: {{ vu_point.description }} <br>
-        {% if vu_point.visited == True %} Status: ✅ {% else %} Status ❌ {% endif %}
-        <p><a href="/country-{{country.id}}/vu-point-{{vu_point.id}}/view">View</a></p>
-        <form action="/country-{{country.id}}/vu-point-{{vu_point.id}}/delete" method="POST">
-            <button style="width: auto;">Delete</button>
-          </form>
-        <hr>
+    Name: {{ vu_point.name }} <br>
+    Location: {{ vu_point.location.name }} <br>
+    Rating: {{ vu_point.rating }} <br>
+    Description: {{ vu_point.description }} <br>
+    {% if vu_point.visited == True %} Status: ✅ {% else %} Status ❌ {% endif %}
+    <p><a href="/country-{{country.id}}/vu-point-{{vu_point.id}}/view">View</a></p>
+    <form action="/country-{{country.id}}/vu-point-{{vu_point.id}}/delete" method="POST">
+        <button style="width: auto;">Delete VU.</button>
+    </form>
+    <hr>
     {% endfor %}
 
 </section>
