country percentage working

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -6,7 +6,7 @@
         <img style="height: 80px;" src="https://qph.fs.quoracdn.net/main-qimg-2b21b9dd05c757fe30231fac65b504dd"
             alt="profile picture">
         <h2>Craig Wilson</h2>
-        <p> 🌍%: </p>
+        <p> 🌍%: {{ country_percentage }} </p>
         <p> No. of countries: </p>
         <form action="/profile" method='POST'>
             <select required style="width: 35%;" id="country" name="country">
