--- a/templates/profile.html
+++ b/templates/profile.html
@@ -7,7 +7,7 @@
             alt="profile picture">
         <h2>Craig Wilson</h2>
         <p> 🌍%: {{ country_percentage }} </p>
-        <p> No. of countries: </p>
+        <p> No. of countries: {{ countries_visited }} </p>
         <form action="/profile" method='POST'>
             <select required style="width: 35%;" id="country" name="country">
                 <option value="please-select" selected disabled="true">Select country</option>
