--- a/templates/countries/edit.html
+++ b/templates/countries/edit.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 Country Edit:
-<form action="/country-{{country.id}}/edit" method='POST'>
+<form action="/countries-{{country.id}}/edit" method='POST'>
     <select required style="width: 35%;" id="country" name="country">
         <option value="{{country.name}}" selected>{{country.name}}</option>
         <option value="---" disabled="true">---</option>
