--- a/templates/countries/view.html
+++ b/templates/countries/view.html
@@ -7,16 +7,16 @@
 </section>
 <section>
     <button>
-        <a href="/country-{{country.id}}/edit">Edit</a>
+        <a href="/countries-{{country.id}}/edit">Edit</a>
     </button>
-    <form action="/country-{{country.id}}/delete" method="POST">
-        <button style="width: auto;">Delete Country</button>
+    <form action="/countries-{{country.id}}/delete" method="POST">
+        <button style="width: auto;">Delete</button>
     </form>
 </section>
 <hr>
 <section>
     <button style="width:10%">
-        <a href="/country-{{country.id}}/new_vu">Add VU.</a>
+        <a href="/countries-{{country.id}}/new_vu">Add VU.</a>
     </button>
 </section>
 <hr>
@@ -27,9 +27,9 @@
     Rating: {{ vu_point.rating }} <br>
     Description: {{ vu_point.description }} <br>
     {% if vu_point.visited == True %} Status: ✅ {% else %} Status ❌ {% endif %}
-    <p><a href="/country-{{country.id}}/vu-point-{{vu_point.id}}/view">View</a></p>
-    <form action="/country-{{country.id}}/vu-point-{{vu_point.id}}/delete" method="POST">
-        <button style="width: auto;">Delete VU.</button>
+    <p><a class="view-button" href="/countries-{{country.id}}/vu-points-{{vu_point.id}}/view">View</a></p>
+    <form action="/countries-{{country.id}}/vu-points-{{vu_point.id}}/delete" method="POST">
+        <button class="button-outline" style="width: auto;">Delete</button>
     </form>
     <hr>
     {% endfor %}
