--- a/templates/vu_points/view.html
+++ b/templates/vu_points/view.html
@@ -12,7 +12,7 @@
         Rating: {{ vu_point.rating }} <br>
         Description: {{ vu_point.description }} <br>
         {% if vu_point.visited == True %} Status: ✅ {% else %} Status ❌ {% endif %}
-        <p><a href="/country-{{country.id}}/vu-point-{{vu_point.id}}/edit">Edit</a></p>
+        <p><a href="/countries-{{country.id}}/vu-points-{{vu_point.id}}/edit">Edit</a></p>
         <hr>
     
 
