--- a/templates/base.html
+++ b/templates/base.html
@@ -10,24 +10,26 @@
 </head>
 
 <body>
-    <!-- Navbar -->
-    <header>
-        <div class="navbar">
-            <div class="container flex">
-                <img class="logo" style="width: 100px" src="static/images/vu_logo_transparent.png" alt="vu logo">
-                <nav>
-                    <ul>
-                        <li><a class="navbar-link" href="/profile">My Profile</a></li>
-                    </ul>
-                </nav>
+    <div id="page-container">
+        <!-- Navbar -->
+        <header>
+            <div class="navbar">
+                <div class="container flex">
+                    <img class="logo" style="width: 100px" src="static/images/vu_logo_transparent.png" alt="vu logo">
+                    <nav>
+                        <ul>
+                            <li><a class="navbar-link" href="/profile">My Profile</a></li>
+                        </ul>
+                    </nav>
+                </div>
             </div>
-        </div>
-    </header>
-    <hr>
-    <main>
-        {% block content %}
-        {% endblock %}
-    </main>
+        </header>
+        <hr>
+        <main>
+            {% block content %}
+            {% endblock %}
+        </main>
+    </div>
 </body>
 
 </html>
