--- a/templates/profile.html
+++ b/templates/profile.html
@@ -14,7 +14,7 @@
             <div class="showcase-form card">
                 <form action="/profile" method='POST'>
                     <h3>Add a Country</h3>
-                    <select required style="width: 30%;" id="country" name="country">
+                    <select required style="width: auto;" id="country" name="country">
                         <option value="please-select" selected disabled="true">Select country</option>
                         <option value="---" disabled="true">---</option>
                         <option value="Afganistan">Afghanistan</option>
