--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>VU. App</title>
 </head>
 
@@ -15,7 +16,7 @@
         <header>
             <div class="navbar">
                 <div class="container flex">
-                    <img class="logo" style="width: 100px" src="static/images/vu_logo_transparent.png" alt="vu logo">
+                <img class="logo" style="width: 100px" src="static/images/vu_logo_transparent.png" alt="vu logo">
                     <nav>
                         <ul>
                             <li><a class="navbar-link" href="/profile">My Profile</a></li>
