--- a/templates/vu_points/view.html
+++ b/templates/vu_points/view.html
@@ -2,20 +2,15 @@
 
 {% block content %}
 
-<section>
-    <h2> {{ vu_point.name }}  </h2>
-</section>
-<section>
-    
+<section class="new-vu-section">
+        <h2> {{ vu_point.name }}  </h2>
         Name:   {{ vu_point.name }} <br>
         Location: {{ vu_point.location.name }} <br>
         Rating: {{ vu_point.rating }} <br>
         Description: {{ vu_point.description }} <br>
         {% if vu_point.visited == True %} Status: ✅ {% else %} Status ❌ {% endif %}
         <p><a href="/countries-{{country.id}}/vu-points-{{vu_point.id}}/edit">Edit</a></p>
-        <hr>
-    
-
 </section>
+<hr>
 
 {% endblock %}
